--- a/contact.html
+++ b/contact.html
@@ -5,57 +5,64 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Contact Us | Law Office of Tusca R. S. Alexis</title>
-    <meta name="keywords" content="mediation, training, law, Tennessee, mediator">
-    <meta name="description"
-        content="Professional mediation training and legal services in Tennessee. Learn to mediate effectively with Alexis Mediation.">
+    
+    <title>Alexis Mediation | Mediation & Training Services in Tennessee</title>
+    <meta name="keywords" content="mediation, mediation training, conflict resolution, Tennessee, mediator, domestic violence mediation, civil mediation">
+    <meta name="description" content="Alexis Mediation offers professional mediation services, training, and conflict resolution support in Tennessee, specializing in civil and family mediation.">
     <meta name="author" content="Alexis Mediation">
-
+    
+    <!-- Favicon -->
+    <link rel="icon" href="/images/Alexis-Mediation-Icon.png" type="image/x-icon">
+ 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
+ 
+    <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="icon" href="/images/Alexis Mediation Icon.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-</head>
-
-<body>
-
-<div class="header_section" style="padding-top: 120px;">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
+    <!-- JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="https://translate.googleapis.com/_/translate_http/_/js/k=translate_http.tr.en_US.9u3XWRF_9xY.O/am=ACA/d=1/exm=el_conf/ed=1/rs=AN8SPfrgqbgLTzCoEstFlh_akor6vUbBUQ/m=el_main"></script>
+ </head>
+ <body class="about-page" style="position: relative; min-height: 100%; top: 0px;">
+    <div class="header_section">
+       <div class="container">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
+             <div class="container">
                 <a class="navbar-brand" href="./">
-                    <h3>Law Office of</h3>
-                    <h1>Tusca R.S. Alexis</h1>
-                    <h3>Attorney at Law & Mediator</h3>
+                   <h1>Alexis Mediation</h1>
+                   <h3>Mediation Training &amp; Services</h3>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="./">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/practice-areas.html">Practice Areas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/training.html">Mediation Training</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact Us</a>
-                        </li>
-                    </ul>
+                   <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                         <a class="nav-link" href="./">Home</a>
+                      </li>
+                      <li class="nav-item active">
+                         <a class="nav-link" href="/about.html">About</a>
+                      </li>
+                      <li class="nav-item">
+                         <a class="nav-link" href="/mediation.html">Mediation Services</a>
+                      </li>
+                      <li class="nav-item">
+                         <a class="nav-link" href="/training.html">Training</a>
+                      </li>
+                      <li class="nav-item">
+                         <a class="nav-link" href="/contact.html">Contact Us</a>
+                      </li>
+                   </ul>
                 </div>
-            </nav>
-        </div>
+             </div>
+          </nav>
+       </div>
     </div>
     <div class="contact_section layout_padding" id="consultation">
         <div class="container">
