--- a/training/family-mediation-training.html
+++ b/training/family-mediation-training.html
@@ -207,37 +207,38 @@
 </head>
 
 <body>
-    <div class="header_section" style="padding-top: 120px;">
+    <div class="header_section">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
-                <a class="navbar-brand" href="../">
-                    <h3>Law Office of</h3>
-                    <h1>Tusca R.S. Alexis</h1>
-                    <h3>Attorney at Law & Mediator</h3>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/practice-areas.html">Practice Areas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/training.html">Mediation Training</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact Us</a>
-                        </li>
-                    </ul>
+                <div class="container">
+                    <a class="navbar-brand" href="./">
+                        <h1>Alexis Mediation</h1>
+                        <h3>Mediation Training &amp; Services</h3>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="./">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/mediation.html">Mediation Services</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="/training.html">Training</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/contact.html">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -245,7 +246,7 @@
 
     <div class="training_container">
         <div class="image-container">
-            <img class="trainingLogo" src="/images/Alexis Mediation Logo_lght_bg.png" alt="Alexis Mediation">
+            <img class="trainingLogo" src="/images/Alexis Mediation Logo.png" alt="Alexis Mediation">
         </div>
         <div class="col-md-12">
             <h1 class="training-title">Family Mediation Training Course</h1>
@@ -309,27 +310,17 @@
             </ul>
 
             <h2 class="signup-title" id="signup-form">Sign Up for Domestic Violence Mediation Training</h2>
-            <p class="signup-instructions">Please fill out the form below to register for the course. Once you click the
-                "Sign Up Now" button, you will be directed to PayPal to complete your registration and payment.
+            <p class="signup-instructions">
+                Please click the button below to register for the course. You will be directed to PayPal to complete
+                your registration and payment.
+            </p>
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                <div class="form-group">
-                    <label for="name" class="form-label">Full Name</label>
-                    <input type="text" class="form-control" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="phone" class="form-label">Phone Number</label>
-                    <input type="tel" class="form-control" id="phone" name="phone" required>
-                </div>
                 <input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="FRW46ECPP8EUJ">
                 <button type="submit" class="paypal-button">Sign Up Now</button>
-                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" width="1"
-                    height="1">
             </form>
+
+
 
             <h2 class="payment-info-title">Payment Information</h2>
             <p class="payment-info">
