--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                <div class="location_text">
                   <ul>
                      <li>
-                        <a target="_new"
+                        <a target="_blank"
                            href="https://www.google.com/maps/place/301+S+Perimeter+Park+Dr+%23100,+Nashville,+TN+37211/@36.0836923,-86.6996681,17z/data=!3m1!4b1!4m5!3m4!1s0x88646e5439329a9b:0x1b039b85e5a50caf!8m2!3d36.0836923!4d-86.6974794"><i
                               class="fa fa-map-marker" aria-hidden="true"></i></a>
                      </li>
@@ -421,7 +421,6 @@
                <a class="navbar-brand" href="index.html">
                   <h1>Alexis Mediation</h1>
                   <h3>Mediation Training &amp; Services</h3>
-                  <!--<img src="images/logo-tusca-alexis.png" alt="Alexis Mediation Logo" width="250">-->
                </a>
             </div>
             <div class="social_icon">
@@ -433,14 +432,23 @@
                </ul>
             </div>
          </div>
+         <!-- Language Links -->
+         <div id="language_switcher" style="text-align: center; margin-top: 20px;">
+            <a href="https://translate.google.com/translate?hl=en&sl=auto&tl=en&u=http://127.0.0.1/" target="_blank" 
+               style="margin-right: 10px; text-decoration: none; font-size: 18px;">EN</a> |
+            <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=http://127.0.0.1/" target="_blank" 
+               style="margin-left: 10px; text-decoration: none; font-size: 18px;">Español</a>
+         </div>
       </div>
-
    </div>
+   
    <div class="copyright_section">
       <div class="container">
          <p class="copyright_text">© 2024 All Rights Reserved.</p>
       </div>
    </div>
+   
+   
 
    <script src="js/jquery.min.js"></script>
    <script src="js/popper.min.js"></script>
