--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@
          </div>
          <!-- Language Links -->
          <div id="language_switcher" style="text-align: center; margin-top: 20px;">
-            <a href="https://translate.google.com/translate?hl=en&sl=auto&tl=en&u=http://127.0.0.1/" target="_blank" 
+            <a href="https://translate.google.com/translate?hl=en&sl=auto&tl=en&u=https://miguel-33-github-io.vercel.app/" target="_blank" 
                style="margin-right: 10px; text-decoration: none; font-size: 18px;">EN</a> |
-            <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=http://127.0.0.1/" target="_blank" 
+            <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=https://miguel-33-github-io.vercel.app/" target="_blank" 
                style="margin-left: 10px; text-decoration: none; font-size: 18px;">Español</a>
          </div>
       </div>
