--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
          </div>
          <!-- Language Links -->
          <div id="language_switcher" style="text-align: center; margin-top: 20px;">
-            <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=https://miguel-33-github-io.vercel.app/" target="_blank" 
+            <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=https://miguel-33-github-io.vercel.app/" target="_self" 
                style="margin-left: 10px; text-decoration: none; font-size: 18px;">Español</a>
          </div>
       </div>
