--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-   
-   <title>Alexis Mediation | Mediation & Training Services in Tennessee</title>
-   <meta name="keywords" content="mediation, mediation training, conflict resolution, Tennessee, mediator, domestic violence mediation, civil mediation">
-   <meta name="description" content="Alexis Mediation offers professional mediation services, training, and conflict resolution support in Tennessee, specializing in civil and family mediation.">
+
+   <title>Alexis Mediation | Training & Mediation Services in Tennessee</title>
+
+   <!-- English Metadata -->
+   <meta name="keywords"
+      content="mediation, mediation training, conflict resolution, Tennessee, mediator, domestic violence mediation, civil mediation">
+   <meta name="description"
+      content="Alexis Mediation offers professional mediation services, training, and conflict resolution support in Tennessee, specializing in civil and family mediation.">
    <meta name="author" content="Alexis Mediation">
-   
+   <meta name="language" content="en">
+
+   <!-- Spanish Metadata -->
+   <meta name="keywords"
+      content="mediación, formación en mediación, resolución de conflictos, Tennessee, mediador, mediación en violencia doméstica, mediación civil">
+   <meta name="description"
+      content="Alexis Mediation ofrece servicios profesionales de mediación, formación y apoyo en resolución de conflictos en Tennessee, especializándose en mediación civil y familiar.">
+   <meta name="language" content="es">
+   <meta name="robots" content="index, follow">
+
    <!-- Favicon -->
-   <link rel="icon" href="/images/Alexis-Mediation-Icon.png" type="image/x-icon">
+   <link rel="icon" href="/images/Alexis Mediation Icon.png" type="image/x-icon">
 
    <!-- Fonts -->
    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
@@ -26,7 +39,8 @@
 
    <!-- JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-   <script type="text/javascript" charset="UTF-8" src="https://translate.googleapis.com/_/translate_http/_/js/k=translate_http.tr.en_US.9u3XWRF_9xY.O/am=ACA/d=1/exm=el_conf/ed=1/rs=AN8SPfrgqbgLTzCoEstFlh_akor6vUbBUQ/m=el_main"></script>
+   <script type="text/javascript" charset="UTF-8"
+      src="https://translate.googleapis.com/_/translate_http/_/js/k=translate_http.tr.en_US.9u3XWRF_9xY.O/am=ACA/d=1/exm=el_conf/ed=1/rs=AN8SPfrgqbgLTzCoEstFlh_akor6vUbBUQ/m=el_main"></script>
 </head>
 
 <body style="position: relative; min-height: 100%; top: 0px;">
@@ -36,8 +50,7 @@
          <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
             <div class="container">
                <a class="navbar-brand" href="./">
-                  <h1>Alexis Mediation</h1>
-                  <h3>Mediation Training &amp; Services</h3>
+                  <img src="images/Alexis_Mediation_Header_Logo-removebg.png" alt="Alexis Mediation Logo" height="250px" width="250px" style="margin-bottom: 10px;">
                </a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +65,7 @@
                         <a class="nav-link" href="/about.html">About</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="/mediation.html">Mediation Services</a>
+                        <a class="nav-link" href="/mediation.html">Mediation</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="/training.html">Training</a>
@@ -60,6 +73,12 @@
                      <li class="nav-item">
                         <a class="nav-link" href="/contact.html">Contact Us</a>
                      </li>
+                     <li id="language_switcher">
+                        <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=https://miguel-33-github-io.vercel.app/" 
+                           target="_self">
+                            Español
+                        </a>
+                     </li>              
                   </ul>
                </div>
             </div>
@@ -371,7 +390,7 @@
    </div>
 
 
-   <div class="contact_section layout_padding scroll-reveal" id="consultation"> 
+   <div class="contact_section layout_padding scroll-reveal" id="consultation">
       <div class="container">
          <div class="row">
             <div class="col-sm-12">
@@ -386,7 +405,9 @@
                         <input type="text" class="mail_text" placeholder="Name" name="Name">
                         <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
                         <input type="text" class="mail_text" placeholder="Your Email" name="Your Email">
-                        <textarea class="message-bt" placeholder="Tell us about your situation or ask us about mediation" rows="5" id="comment" name="Message"></textarea>
+                        <textarea class="message-bt"
+                           placeholder="Tell us about your situation or ask us about mediation" rows="5" id="comment"
+                           name="Message"></textarea>
                         <button type="submit" class="send_bt">Send Message</button>
                      </form>
                   </div>
@@ -395,7 +416,7 @@
          </div>
       </div>
    </div>
-   
+
 
    <div class="footer_section layout_padding">
       <div class="container">
@@ -418,9 +439,8 @@
                </div>
             </div>
             <div class="footer_logo">
-               <a class="navbar-brand" href="index.html">
-                  <h1>Alexis Mediation</h1>
-                  <h3>Mediation Training &amp; Services</h3>
+               <a class="navbar-brand" href="./">
+                  <img src="images/Alexis_Mediation_Logo_white-removebg.png" alt="Alexis Mediation Logo" height="250px" width="250px">
                </a>
             </div>
             <div class="social_icon">
@@ -432,11 +452,6 @@
                </ul>
             </div>
          </div>
-         <!-- Language Links -->
-         <div id="language_switcher" style="text-align: center; margin-top: 20px;">
-            <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=https://miguel-33-github-io.vercel.app/" target="_self" 
-               style="margin-left: 10px; text-decoration: none; font-size: 18px;">Español</a>
-         </div>
       </div>
    </div>
    
@@ -446,7 +461,7 @@
       </div>
    </div>
    
-   
+
 
    <script src="js/jquery.min.js"></script>
    <script src="js/popper.min.js"></script>
