--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
                <div class="container">
                   <a class="navbar-brand" href="./">
-                     <h1>Alexis Mediation</h1>
-                     <h3>Mediation Training &amp; Services</h3>
+                     <img src="images/Alexis_Mediation_Header_Logo-removebg.png" alt="Alexis Mediation Logo" height="250px"
+                        width="250px" style="margin-bottom: 10px;">
                   </a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,13 +49,17 @@
                            <a class="nav-link" href="/about.html">About</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="/mediation.html">Mediation Services</a>
+                           <a class="nav-link" href="/mediation.html">Mediation</a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link" href="/training.html">Training</a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link" href="/contact.html">Contact Us</a>
+                        </li>
+                        <li id="language_switcher">
+                           <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=https://miguel-33-github-io.vercel.app/"
+                              target="_self">Español</a>
                         </li>
                      </ul>
                   </div>
@@ -89,7 +93,7 @@
                   <div class="location_text">
                      <ul>
                         <li>
-                           <a target="_new"
+                           <a target="_blank"
                               href="https://www.google.com/maps/place/301+S+Perimeter+Park+Dr+%23100,+Nashville,+TN+37211/@36.0836923,-86.6996681,17z/data=!3m1!4b1!4m5!3m4!1s0x88646e5439329a9b:0x1b039b85e5a50caf!8m2!3d36.0836923!4d-86.6974794"><i
                                  class="fa fa-map-marker" aria-hidden="true"></i></a>
                         </li>
@@ -103,11 +107,8 @@
                   </div>
                </div>
                <div class="footer_logo">
-                  <a class="navbar-brand" href="index.html">
-                     <h3>Law Office of</h3>
-                     <h1>Tusca R.S. Alexis</h1>
-                     <h3>Attorney at Law & Mediator</h3>
-                     <!--<img src="images/logo-tusca-alexis.png" alt="Alexis Mediation Logo" width="250">-->
+                  <a class="navbar-brand" href="./">
+                     <img src="images/Alexis_Mediation_Logo_white-removebg.png" alt="Alexis Mediation Logo" height="250px" width="250px">
                   </a>
                </div>
                <div class="social_icon">
@@ -120,17 +121,7 @@
                </div>
             </div>
          </div>
-         <div id="google_translate_element" style="text-align: center;"></div>
       </div>
-   
-      <script type="text/javascript">
-      function googleTranslateElementInit() {
-        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-      }
-      </script>
-      
-      <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-      
       <div class="copyright_section">
          <div class="container">
             <p class="copyright_text">© 2024 All Rights Reserved.</p>
