--- a/moreabout.html
+++ b/moreabout.html
@@ -5,64 +5,73 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    
+
     <title>Alexis Mediation | Mediation & Training Services in Tennessee</title>
-    <meta name="keywords" content="mediation, mediation training, conflict resolution, Tennessee, mediator, domestic violence mediation, civil mediation">
-    <meta name="description" content="Alexis Mediation offers professional mediation services, training, and conflict resolution support in Tennessee, specializing in civil and family mediation.">
+    <meta name="keywords"
+        content="mediation, mediation training, conflict resolution, Tennessee, mediator, domestic violence mediation, civil mediation">
+    <meta name="description"
+        content="Alexis Mediation offers professional mediation services, training, and conflict resolution support in Tennessee, specializing in civil and family mediation.">
     <meta name="author" content="Alexis Mediation">
-    
+
     <!-- Favicon -->
     <link rel="icon" href="/images/Alexis-Mediation-Icon.png" type="image/x-icon">
- 
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
- 
+
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- 
+
     <!-- JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://translate.googleapis.com/_/translate_http/_/js/k=translate_http.tr.en_US.9u3XWRF_9xY.O/am=ACA/d=1/exm=el_conf/ed=1/rs=AN8SPfrgqbgLTzCoEstFlh_akor6vUbBUQ/m=el_main"></script>
- </head>
- <body class="about-page" style="position: relative; min-height: 100%; top: 0px;">
+    <script type="text/javascript" charset="UTF-8"
+        src="https://translate.googleapis.com/_/translate_http/_/js/k=translate_http.tr.en_US.9u3XWRF_9xY.O/am=ACA/d=1/exm=el_conf/ed=1/rs=AN8SPfrgqbgLTzCoEstFlh_akor6vUbBUQ/m=el_main"></script>
+</head>
+
+<body class="about-page" style="position: relative; min-height: 100%; top: 0px;">
     <div class="header_section">
-       <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
-             <div class="container">
-                <a class="navbar-brand" href="./">
-                   <h1>Alexis Mediation</h1>
-                   <h3>Mediation Training &amp; Services</h3>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                   <ul class="navbar-nav ml-auto">
-                      <li class="nav-item">
-                         <a class="nav-link" href="./">Home</a>
-                      </li>
-                      <li class="nav-item active">
-                         <a class="nav-link" href="/about.html">About</a>
-                      </li>
-                      <li class="nav-item">
-                         <a class="nav-link" href="/mediation.html">Mediation Services</a>
-                      </li>
-                      <li class="nav-item">
-                         <a class="nav-link" href="/training.html">Training</a>
-                      </li>
-                      <li class="nav-item">
-                         <a class="nav-link" href="/contact.html">Contact Us</a>
-                      </li>
-                   </ul>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
+                <div class="container">
+                    <a class="navbar-brand" href="./">
+                        <img src="images/Alexis_Mediation_Header_Logo-removebg.png" alt="Alexis Mediation Logo"
+                            height="250px" width="250px" style="margin-bottom: 10px;">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="./">Home</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="/about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/mediation.html">Mediation</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/training.html">Training</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/contact.html">Contact Us</a>
+                            </li>
+                            <li id="language_switcher">
+                                <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=https://miguel-33-github-io.vercel.app/"
+                                    target="_self">Español</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-             </div>
-          </nav>
-       </div>
+            </nav>
+        </div>
     </div>
 
     <div class="about_section">
@@ -133,49 +142,42 @@
         </div>
     </div>
     </div>
-    <!-- about section end -->
-    <!-- footer section start -->
     <div class="footer_section layout_padding">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="location_text">
-                        <ul>
-                            <li>
-                                <a target="_new"
-                                    href="https://www.google.com/maps/place/301+S+Perimeter+Park+Dr+%23100,+Nashville,+TN+37211/@36.0836923,-86.6996681,17z/data=!3m1!4b1!4m5!3m4!1s0x88646e5439329a9b:0x1b039b85e5a50caf!8m2!3d36.0836923!4d-86.6974794"><i
-                                        class="fa fa-map-marker" aria-hidden="true"></i></a>
-                            </li>
-                            <li>
-                                <a href="tel:615-828-4087"><i class="fa fa-phone" aria-hidden="true"></i></a>
-                            </li>
-                            <li>
-                                <a href="mailto:alexislawfirm@aol.com"><i class="fa fa-envelope"
-                                        aria-hidden="true"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="footer_logo">
-                    <a class="navbar-brand" href="index.html">
-                        <h3>Law Office of</h3>
-                        <h1>Tusca R.S. Alexis</h1>
-                        <h3>Mediation Training and Services</h3>
-                        <!--<img src="images/logo-tusca-alexis.png" alt="Alexis Mediation Logo" width="250">-->
-                    </a>
-                </div>
-                <div class="social_icon">
+           <div class="row">
+              <div class="col-md-12">
+                 <div class="location_text">
                     <ul>
-                        <li><a href="https://www.facebook.com/p/Tusca-Alexis-61551910778340/" target="_blank"><i
-                                    class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="https://www.instagram.com/tuscaalexis4judge/" target="_blank"><i
-                                    class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                       <li>
+                          <a target="_blank"
+                             href="https://www.google.com/maps/place/301+S+Perimeter+Park+Dr+%23100,+Nashville,+TN+37211/@36.0836923,-86.6996681,17z/data=!3m1!4b1!4m5!3m4!1s0x88646e5439329a9b:0x1b039b85e5a50caf!8m2!3d36.0836923!4d-86.6974794"><i
+                                class="fa fa-map-marker" aria-hidden="true"></i></a>
+                       </li>
+                       <li>
+                          <a href="tel:615-828-4087"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                       </li>
+                       <li>
+                          <a href="mailto:alexislawfirm@aol.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                       </li>
                     </ul>
-                </div>
-            </div>
+                 </div>
+              </div>
+              <div class="footer_logo">
+                 <a class="navbar-brand" href="./">
+                    <img src="images/Alexis_Mediation_Logo_white-removebg.png" alt="Alexis Mediation Logo" height="250px" width="250px">
+                 </a>
+              </div>
+              <div class="social_icon">
+                 <ul>
+                    <li><a href="https://www.facebook.com/p/Tusca-Alexis-61551910778340/" target="_blank"><i
+                             class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com/tuscaalexis4judge/" target="_blank"><i class="fa fa-instagram"
+                             aria-hidden="true"></i></a></li>
+                 </ul>
+              </div>
+           </div>
         </div>
-    </div>
-    <!-- footer section end -->
+     </div>
     <!-- copyright section start -->
     <div class="copyright_section">
         <div class="container">
