--- a/training/family-civil-mediation-training.html
+++ b/training/family-civil-mediation-training.html
@@ -212,8 +212,8 @@
            <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
               <div class="container">
                  <a class="navbar-brand" href="./">
-                    <h1>Alexis Mediation</h1>
-                    <h3>Mediation Training &amp; Services</h3>
+                    <img src="images/Alexis_Mediation_Header_Logo-removebg.png" alt="Alexis Mediation Logo" height="250px"
+                       width="250px" style="margin-bottom: 10px;">
                  </a>
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -228,7 +228,7 @@
                           <a class="nav-link" href="/about.html">About</a>
                        </li>
                        <li class="nav-item">
-                          <a class="nav-link" href="/mediation.html">Mediation Services</a>
+                          <a class="nav-link" href="/mediation.html">Mediation</a>
                        </li>
                        <li class="nav-item active">
                           <a class="nav-link" href="/training.html">Training</a>
@@ -236,12 +236,16 @@
                        <li class="nav-item">
                           <a class="nav-link" href="/contact.html">Contact Us</a>
                        </li>
+                       <li id="language_switcher">
+                          <a href="https://translate.google.com/translate?hl=es&sl=auto&tl=es&u=https://miguel-33-github-io.vercel.app/"
+                             target="_self">Español</a>
+                       </li>
                     </ul>
                  </div>
               </div>
            </nav>
         </div>
-    </div>
+     </div>
     <div class="training_container">
         <div class="image-container">
             <img class="trainingLogo" src="/images/Alexis Mediation Logo.png" alt="Alexis Mediation">
