--- a/training/family-civil-mediation-training.html
+++ b/training/family-civil-mediation-training.html
@@ -212,7 +212,7 @@
            <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
               <div class="container">
                  <a class="navbar-brand" href="./">
-                    <img src="images/Alexis_Mediation_Header_Logo-removebg.png" alt="Alexis Mediation Logo" height="250px"
+                    <img src="../images/Alexis_Mediation_Header_Logo-removebg.png" alt="Alexis Mediation Logo" height="250px"
                        width="250px" style="margin-bottom: 10px;">
                  </a>
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
