--- a/training/family-mediation-training.html
+++ b/training/family-mediation-training.html
@@ -211,7 +211,7 @@
         <div class="container">
            <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
               <div class="container">
-                 <a class="navbar-brand" href="./">
+                 <a class="navbar-brand" href="../">
                     <img src="../images/Alexis_Mediation_Header_Logo-removebg.png" alt="Alexis Mediation Logo" height="250px"
                        width="250px" style="margin-bottom: 10px;">
                  </a>
@@ -222,7 +222,7 @@
                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                        <li class="nav-item">
-                          <a class="nav-link" href="./">Home</a>
+                          <a class="nav-link" href="../">Home</a>
                        </li>
                        <li class="nav-item">
                           <a class="nav-link" href="/about.html">About</a>
