--- a/training/civil-family-mediation-training.html
+++ b/training/civil-family-mediation-training.html
@@ -252,7 +252,7 @@
             <img class="trainingLogo" src="/images/Alexis Mediation Logo.png" alt="Alexis Mediation">
         </div>
         <div class="col-md-12">
-            <h1 class="training-title">Family Mediation Training Course</h1>
+            <h1 class="training-title">Civil to Family Mediation Training Course</h1>
             <p class="training-intro">
                 The Civil to Family Mediation Training is a comprehensive 30-hour course, spanning 4 days, that includes lectures, written exercises, group discussions, and hands-on mediation simulations. Throughout the course, participants will engage in role-playing exercises, taking turns acting as the mediator, plaintiff, defendant, or attorney. When acting as the mediator, participants will practice delivering opening statements and guiding disputes toward resolution or to a designated time limit. This role-playing experience aims to help participants build practical skills and confidence in mediation.
             </p>
