--- a/training/civil-family-mediation-training.html
+++ b/training/civil-family-mediation-training.html
@@ -259,7 +259,7 @@
 
             <h2 class="class-details-title">Class Details</h2>
             <ul class="class-details-list">
-                <ul class="class-dates-list" id="weekend-1"><strong>First Weekend:</strong>
+                <ul class="class-dates-list" id="weekend-civil-to-family"><strong>First Weekend:</strong>
                     <!-- Class dates will be populated here -->
                 </ul>
                 <ul class="class-dates-list" id="weekend-2"><strong>Second Weekend:</strong></ul>
